--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             </a>
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
+
                 <!-- SEGUNDA -->
-                03/04
+                10/04
+
               </a>
             </h3>
             <p>
@@ -70,10 +72,11 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <li> FIGADO ACEBOLADO</li>
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO COM BATATAS </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
@@ -89,8 +92,8 @@
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
-              <li> PIRARUCU A MILANESA </li>
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> PIRARUCU A MILANESA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -111,8 +114,8 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
-              <li> PIZZA </li>
+              <li> SALGADO </li>
+              <!-- <li> PIZZA </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
             </ul>
@@ -125,8 +128,10 @@
             </a>
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
+
                 <!-- TERÇA -->
-                04/04
+                11/04
+
               </a>
             </h3>
             <p>
@@ -137,10 +142,10 @@
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
-              <!-- <li> FRUTA </li> -->
+              <li> FRUTA </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -157,7 +162,8 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> BITECA SUINÁ>
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -166,7 +172,7 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
@@ -174,7 +180,7 @@
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -204,10 +210,10 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
+              <li> PÃO COM QUEIJO QUENTE </li>
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -220,8 +226,10 @@
             </a>
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
+
                 <!-- QUARTA -->
-                05/04
+                12/04
+
               </a>
             </h3>
             <p>
@@ -235,12 +243,12 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <!-- <li> OVO COZIDO </li> -->
+              <li> OVO COZIDO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SOPA </li> -->
@@ -256,10 +264,11 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BISTECA SUÍNA </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE GUISADA </li>
+              <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
+              <li> ESCONDIDINHO DE CARNE </li>
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
@@ -269,6 +278,7 @@
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO COM BATATAS</li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -278,7 +288,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUIÇA ASSADA DE FORNO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -294,7 +304,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> AÇAÍ FARINHA DE TAPIOCA </li>
+              <!-- <li> AÇAÍ FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -306,7 +316,7 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
@@ -321,8 +331,10 @@
             </a>
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
+
                 <!-- QUINTA -->
-                06/04
+                13/04
+
               </a>
             </h3>
             <p>
@@ -334,8 +346,9 @@
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTAS </li> -->
+              <li> FAROFA DE CONSERVA </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> OVO COZIDO </li>
+              <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
@@ -366,9 +379,10 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO DE FORNO</li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> HAMBURGER </li> -->
@@ -383,10 +397,10 @@
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PEITO DE FRANGO </li> -->
-              <li> PIRARUCU DESFIADO </li>
+              <!-- <li> PIRARUCU DESFIADO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
+              <li> YAKISOBA DE CARNE </li>
 
               <!-- <li> PIRARUCU A MILANESA </li> -->
 
@@ -397,8 +411,8 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
-              <li> BAQUETE </li>
+              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
+              <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
@@ -425,8 +439,10 @@
             </a>
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
+
                 <!-- SEXTA -->
-                07/04
+                14/04
+
               </a>
             </h3>
             <p>
@@ -439,13 +455,13 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> MOLHO DE SALSICHA </li>
+              <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
 
@@ -462,9 +478,9 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE ASADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
-              <li> COSTELA AO MOLHO PEIXE</li>
+              <!-- <li> COSTELA AO MOLHO PEIXE</li> -->
               <!-- <li> COSTELA ASSADA </li> -->
-              <!-- <li> CHURRASCO </li> -->
+              <li> CHURRASCO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -524,8 +540,10 @@
             </a>
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
+
                 <!-- SÁBADO -->
-                08/04
+                15/04
+
               </a>
             </h3>
             <p>
@@ -544,7 +562,8 @@
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> SOPA </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SALSICHA AO MOLHO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
@@ -562,9 +581,9 @@
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
-              <li> FILE DE FRANGO FRITO </li>
+              <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
-              <!-- <li> FRANGO A MILANESA </li> -->
+              <li> FRANGO A MILANESA </li>
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
@@ -574,13 +593,14 @@
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
+              <li> ISCA MISTA </li>
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
+              <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PEITO DE FRANCO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -597,11 +617,12 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM OVO </li>
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
@@ -618,8 +639,10 @@
 
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
+
                 <!-- DOMINGO -->
-                09/04
+                16/04
+
               </a>
             </h3>
             <p>
@@ -660,8 +683,9 @@
               <!-- <li> FILE DE FRANGO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO DE FORNO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
-              <li> FRANGO FRITO </li>
+              <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
@@ -671,8 +695,9 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> OMELETE </li>
-              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> OMELETE </li> -->
+              <li> PANQUECA </li>
+              <!-- <li> PANQUECA DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -692,11 +717,11 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
               <!-- <li> PASTEL </li> -->
-              <!-- <li> PIT STOP / IOGURTE </li> -->
+              <li> PIT STOP / IOGURTE </li>
               <!-- <li> SALGADO </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
