--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
-              <li> BITECA SUINÁ>
+              <li> BISTECA SUINÁ </li> 
               <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
