--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
               <!-- <li> BISTECA SUINÁ </li>  -->
-              <li> CARNE AO MOLHO </li>;
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
