--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                17/04
+                24/04
 
               </a>
             </h3>
@@ -60,7 +60,7 @@
               <!-- <li> ASSADO DE PANELA </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> CALABRESA E ACEBOLADA </li> -->
@@ -74,7 +74,7 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FIGADO ACEBOLADO</li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -92,8 +92,8 @@
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
-              <!-- <li> PIRARUCU A MILANESA </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <li> PIRARUCU A MILANESA </li>
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -111,13 +111,13 @@
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> MINGAU DE MUNGUNZA </li>
+              <!-- <li> MINGAU DE MUNGUNZA </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> PIZZA </li> -->
-              <!-- <li> X SALADA </li> -->
+              <li> X SALADA </li>
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
             </ul>
             </p>
@@ -131,7 +131,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- TERÇA -->
-                18/04
+                25/04
 
               </a>
             </h3>
@@ -145,9 +145,9 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <!-- <li> OVO COZIDO </li> -->
+              <li> OVO COZIDO </li>
               <!-- <li> OVO FRITO </li> -->
-              <li> PATÊ </li>
+              <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
@@ -164,7 +164,7 @@
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
               <!-- <li> BISTECA SUINÁ </li>  -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -177,12 +177,13 @@
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -190,7 +191,7 @@
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO </li> -->
               <!-- <li> PIRARUCU FRITO </li> -->
-              <li> PIRARUCU MILANESA </li>
+              <!-- <li> PIRARUCU MILANESA </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -202,7 +203,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
+              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -215,7 +216,7 @@
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -230,7 +231,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                19/04
+                26/04
 
               </a>
             </h3>
@@ -249,8 +250,8 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
-              <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <li> QUARENTÃO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SOPA </li> -->
@@ -268,7 +269,7 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE GUISADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
-              <li> DOBRADINHA </li>
+              <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> ESCONDIDINHO DE CARNE </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
@@ -291,6 +292,7 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUIÇA ASSADA DE FORNO </li> -->
+              <li> MACARRONADA DE CAMARÃO </li>
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
@@ -319,8 +321,8 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
-              <li> SALADA DE FRUTA </li>
+              <li> SALGADO </li>
+              <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
@@ -337,7 +339,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                20/04
+                27/04
 
               </a>
             </h3>
@@ -351,10 +353,10 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTAS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FRUTAS </li>
+              <!-- <li> FRUTAS </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -374,7 +376,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE DESFIADA COM LEGUMES </li>
+              <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -399,7 +401,7 @@
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <li> PANQUECAS DE CARNE </li>
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PEITO DE FRANGO </li> -->
               <!-- <li> PIRARUCU DESFIADO </li> -->
@@ -431,7 +433,8 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
+              <li> TAPIOCA COM QUEIJO</li>
               <!-- <li> X SALADA </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
             </ul>
@@ -446,7 +449,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                21/04
+                28/04
 
               </a>
             </h3>
@@ -457,7 +460,7 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
@@ -466,7 +469,7 @@
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
 
@@ -489,7 +492,7 @@
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <!-- <li> FEIJOADA </li> -->
+              <li> FEIJOADA </li>
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
@@ -503,7 +506,7 @@
               <!-- <li> ISCA DE CARNE COM FRITAS</li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
-              <li> LASANHA </li>
+              <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -531,9 +534,9 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <li> PIZZA </li>
+              <!-- <li> PIZZA </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -547,7 +550,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                22/04
+                29/04
 
               </a>
             </h3>
@@ -647,7 +650,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                23/04
+                30/04
 
               </a>
             </h3>
