--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prolam</title>
+  <title> Prolam </title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <a><img src="./assets/imagensInicialLogo.png" alt="PROLAM" /></a></br></br>
-        <h3>CARDÁPIO SEMANAL</h3></br>
+        <h3> CARDÁPIO SEMANAL </h3></br>
       </header>
       <div class="content">
         <div class="cards">
@@ -29,8 +29,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEGUNDA -->
-                24/04
-
+                01/05 
               </a>
             </h3>
             <p>
@@ -131,7 +130,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- TERÇA -->
-                25/04
+                02/05
 
               </a>
             </h3>
@@ -164,7 +163,7 @@
               <!-- <li> BIFE A PARMIGIANA </li> -->
               <!-- <li> BIFE A CAVALO </li> -->
               <!-- <li> BISTECA SUINÁ </li>  -->
-              <!-- <li> CARNE AO MOLHO </li> -->
+              <li> CARNE AO MOLHO </li>
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -177,16 +176,16 @@
               <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO </li> -->
@@ -203,7 +202,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> AÇAÍ COM FARINHA DE TAPIOCA </li>
+              <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -217,7 +216,7 @@
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
+              <li> MINGAU DE MUNGUNZÁ </li>
               <!-- <li> X SALADA </li> -->
             </ul>
             </p>
@@ -231,7 +230,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUARTA -->
-                26/04
+                03/05
 
               </a>
             </h3>
@@ -245,12 +244,13 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
+              <li> MACAXEIRA COZIDA </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
-              <li> QUARENTÃO </li>
+              <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
@@ -278,11 +278,11 @@
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
-              <li> FRANGO A DORE </li>
+              <!-- <li> FRANGO A DORE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> FRANGO GUISADO COM BATATAS</li> -->
+              <li> FRANGO GUISADO COM BATATAS</li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
@@ -292,11 +292,11 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUIÇA ASSADA DE FORNO </li> -->
-              <li> MACARRONADA DE CAMARÃO </li>
+              <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -309,7 +309,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> AÇAÍ FARINHA DE TAPIOCA </li> -->
+              <li> AÇAÍ FARINHA DE TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -321,7 +321,7 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> X SALADA </li> -->
@@ -339,7 +339,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- QUINTA -->
-                27/04
+                04/05
 
               </a>
             </h3>
@@ -373,7 +373,7 @@
             <ul>
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> ALMONDEGAS AO MOLHO </li> -->
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE DESFIADA COM LEGUMES </li> -->
@@ -386,14 +386,14 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
-              <li> FRANGO ASSADO DE FORNO</li>
+              <!-- <li> FRANGO ASSADO DE FORNO</li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
               <!-- <li> HAMBURGER </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> ISCA DE CALABRESA </li>
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
@@ -401,7 +401,7 @@
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> LINGUA AO MOLHO </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> PANQUECAS DE CARNE </li>
+              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PEITO DE FRANGO </li> -->
               <!-- <li> PIRARUCU DESFIADO </li> -->
@@ -426,7 +426,7 @@
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> MINGAU DE MILHO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> MINGAU </li> -->
@@ -434,7 +434,7 @@
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <li> TAPIOCA COM QUEIJO</li>
+              <!-- <li> TAPIOCA COM QUEIJO</li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> SALADA DE FRUTA </li> -->
             </ul>
@@ -449,7 +449,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SEXTA -->
-                28/04
+                05/05
 
               </a>
             </h3>
@@ -484,7 +484,7 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> CARNE AO MOLHO </li> -->
-              <li> CARNE ASADA </li>
+              <!-- <li> CARNE ASADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> COSTELA AO MOLHO PEIXE</li> -->
               <!-- <li> COSTELA ASSADA </li> -->
@@ -492,7 +492,7 @@
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
-              <li> FEIJOADA </li>
+              <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
@@ -515,6 +515,7 @@
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> PIRARUCU A CASACA </li> -->
+              <li> RODIZIO DE MASSAS </li>
               <!-- <li> YAKISOBA </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
 
@@ -550,7 +551,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- SÁBADO -->
-                29/04
+                06/05
 
               </a>
             </h3>
@@ -565,13 +566,13 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO </li> -->
-              <li> OVO COZIDO </li>
+              <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <!-- <li> SOPA </li> -->
+              <li> SOPA </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> SALSICHA AO MOLHO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
@@ -583,7 +584,7 @@
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -591,16 +592,16 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
-              <li> FAROFA DE CONSERVA </li>
+              <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
+              <li> FRANGO ASSADO </li>
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> ISCA DE FIGADO </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> ISCA MISTA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
@@ -628,9 +629,9 @@
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <!-- <li> PÃO COM OVO E QUEIJO </li> -->
+              <li> PÃO COM OVO E QUEIJO </li>
               <!-- <li> PÃO COM OVO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
@@ -650,7 +651,7 @@
               <a class="Proficional_Almoco" target="_blank" href="#services">
 
                 <!-- DOMINGO -->
-                30/04
+                07/05
 
               </a>
             </h3>
@@ -665,7 +666,7 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
@@ -674,7 +675,7 @@
               <!-- <li> SALSICHA COM MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
-              <li> TAPIOCA </li>
+              <!-- <li> TAPIOCA </li> -->
             </ul>
             </p></br>
             <p>
@@ -683,7 +684,7 @@
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -695,15 +696,15 @@
               <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO ASSADO DE FORNO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> GUISADO DE CARNE </li> -->
+              <li> GUISADO DE CARNE </li>
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
-              <li> LINGUIÇA DE FRANGO </li>
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> OMELETE </li> -->
               <!-- <li> PANQUECA </li> -->
