--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> TAPIOCA COM QUEIJO </li> -->
+              <li> TAPIOCA COM QUEIJO </li>
 
               <!-- <li> FAROFA DE CONSERVA </li> -->
 
